# slang-sdl3-example

./: .gitignore  CMakeLists.txt  main.c  pipeline.c  pipeline.h  quad.c  quad.h  quad_group.c  quad_group.h  shader.c  shader.h  texture.c  texture.h
assets/: CMakeLists.txt
assets/shaders/: flat-color.fs.slang  flat-color.fs.spirv  flat-color.vs.slang  flat-color.vs.spirv  quad-group.slang
